compute/infra/kubes/gogs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
        - name: postgres
          image: postgres:14.7-alpine3.17
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: gogs-db
        - name: gogs
          image: gogs/gogs:0.13
          ports:
          - containerPort: 22
            name: ssh
          - containerPort: 3000
            name: http
          volumeMounts:
          - name: gogs
            mountPath: /data
      volumes:
        - name: gogs-db
          persistentVolumeClaim:
            claimName: gogs-db-claim
        - name: gogs
          persistentVolumeClaim:
            claimName: gogs-claim
