compute/infra/kubes/gogs/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
        version: v1
    spec:
      containers:
      - name: gogs
        image: gogs/gogs:0.13-arm64
        ports:
        - containerPort: 22
          name: ssh
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: gogs-persistent-storage
          mountPath: /data
      volumes:
      - name: gogs-persistent-storage
        persistentVolumeClaim:
          claimName: gogs-pv-claim
