compute/infra/kubes/gogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-svc
  namespace: gogs
spec:
  type: ClusterIP
  selector:
    app: gogs
  ports:
  - name: http
    protocol: TCP
    port: 3000
