compute/infra/kubes/gogs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - repo.atelier.run
      secretName: repo-atelier-key
  rules:
    - host: repo.atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gogs
                port:
                  number: 3000
